fix: images not fitting well on container

--- a/src/components/NewsCard/NewsCard.scss
+++ b/src/components/NewsCard/NewsCard.scss
@@ -71,6 +71,7 @@
     height: 272px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    object-fit: contain;
   }
 
   &__date {
